# algstr_task

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Tasks/: Task.cpp  Task.h
Tasks/1.1/: firstTask.cpp  firstTask.h
Tasks/1.1/matrix/: matrix.cpp
Tasks/1.2/: secondTask.cpp  secondTask.h
Tasks/1.3/: thirdTask.cpp  thirdTask.h
Tasks/1.4/: fourthTask.cpp  fourthTask.h
Tasks/1.5/: fiveTask.cpp  fiveTask.h
Tasks/1.6/: sixTask.cpp  sixTask.h
Tasks/1.6/node/: List.cpp  List.h  Node.h
Tasks/1.7/: sevenTask.cpp  sevenTask.h
Tasks/1.7/list/: List.h
Tasks/2.0/: old.txt  zero2Task.cpp  zero2Task.h
Tasks/2.1/: first2Task.cpp  first2Task.h
Tasks/2.2/: second2Task.cpp  second2Task.h
Tasks/2.2/list/: Bucket.h  HashMap.h  Node.h
Tasks/2.3/: third2Task.cpp  third2Task.h
Tasks/2.4/: fourth2Task.cpp  fourth2Task.h
Tasks/2.4/tree/: RBNode.h  RBTree.cpp  RBTree.h
Tasks/2.5/: five2Task.cpp  five2Task.h
Tasks/2.6/: six2Task.cpp  six2Task.h
Tasks/2.7/: seven2Task.cpp  seven2Task.h
Tasks/firstTask/: firstTask.cpp  firstTask.h
Tasks/firstTask/matrix/: matrix.h
Tasks/fiveTask/: fiveTask.cpp  fiveTask.h
Tasks/fourthTask/: fourthTask.cpp  fourthTask.h
Tasks/secondTask/: secondTask.cpp  secondTask.h
Tasks/sevenTask/: sevenTask.cpp  sevenTask.h
Tasks/sevenTask/list/: List.cpp  Node.h
Tasks/sixTask/: sixTask.cpp  sixTask.h
Tasks/thirdTask/: thirdTask.cpp  thirdTask.h
Utils/: Utils.cpp  Utils.h
